gitops/platform/base/resources/gateway-resources/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: platform-gateway
  namespace: kube-system
spec:
  gatewayClassName: cilium
  listeners:
    - name: https-test
      port: 443
      protocol: HTTPS
      hostname: "test-ca.atlas"
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - name: test-ca-cert
    - name: https-grafana
      port: 443
      protocol: HTTPS
      hostname: "grafana.atlas"
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - name: grafana-cert
    - name: https-vault
      port: 443
      protocol: HTTPS
      hostname: "vault.atlas"
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - name: vault-cert
    - name: https-s3
      port: 443
      protocol: HTTPS
      hostname: "s3.atlas"
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - name: minio-cert
    - name: https-s3-console
      port: 443
      protocol: HTTPS
      hostname: "console.s3.atlas"
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - name: minio-cert
    - name: https-argocd
      port: 443
      protocol: HTTPS
      hostname: "argocd.atlas"
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - name: argocd-cert
    - name: https-argocd-cli
      port: 443
      protocol: HTTPS
      hostname: "argocd-cli.atlas"
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - name: argocd-cli-cert
